--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <p>Je wallet-ID is geselecteerd voor de meest winstgevende sociale blockchain van het jaar: <span class="glow">Annual Praag Crypto Retreat™</span>!</p>
 <p>
 <strong>📍 LOCATION:</strong> Praag, Tsjechië<br/>
-<strong>📆 DATE:</strong> <span id="dateText">17 september t/m 22 september</span>  | 
+<strong>📆 DATE:</strong> <span id="dateText">17 september</span>  | 
         <strong>⏳ Countdown:</strong> <span class="countdown" id="countdown">—</span><br/>
 <strong>💱 Buy‑in:</strong> Alleen je aanwezigheid + glimlach‑token
       </p>
