--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </div>
 <script defer="defer">
   // ===== Editable date: set your trip start date here (YYYY-MM-DD HH:MM) =====
-  const TRIP_DATE = '2025-09-17 18:00'; // ← pas aan
+  const TRIP_DATE = '2025-09-17 till 2025'; // ← pas aan
   // ==========================================================================
 
   const dateText = document.getElementById('dateText');
